# core-k8s-operator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  go.mod  go.sum  k8s_bootstrap.yaml  pyproject.toml  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt  tox.ini
.github/workflows/: build.yaml  integration-test.yaml  integration-tests.yaml  lint-report.yaml  main.yaml  promote.yaml  publish-charm.yaml  static-analysis.yaml  unit-test.yaml
cmd/core-k8s/: main.go
integration/: integration_test.go  k8s_test.go
integration/juju/: deploy.go  models.go
internal/charm/: charm_test.go  config.go  hooks.go  k8s.go  pebble.go
internal/k8s/: k8s.go
lib/charms/kubernetes_charm_libraries/v0/: multus.py
lib/charms/sdcore_gnbsim_k8s/v0/: fiveg_gnb_identity.py
src/: charm.py  charm_config.py  core.py  ella.py  kubernetes_ella.py
src/core_k8s_operator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/templates/: core.yaml.j2  ella.yaml.j2
tests/integration/: conftest.py  ella_helper.py  juju_helper.py  test_charm.py
tests/unit/: expected_config.yaml  fixtures.py  test_charm.py  test_charm_configure.py  test_collect_status.py  test_kubernetes_ella.py
